--- a/proyecto/datos-DEMRE.ipynb
+++ b/proyecto/datos-DEMRE.ipynb
@@ -2,19 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "46997254",
+   "metadata": {},
+   "source": [
+    "# <img style=\"float: left; padding-right: 20px; width: 200px\" src=\"https://raw.githubusercontent.com/raxlab/imt2200-data/main/media/logo.jpg\"> Proyecto: \"Impacto de la pandemia sobre el NEM\" \n",
+    "## Semestre: 2025-2 \n",
+    "## **Datos primera entrega**\n",
+    "**Grupo de trabajo:** Constanza Alarcón, Carla Espinoza, Gaspar Galaz, Renato Reyes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2209234b-92e1-4781-b342-b1aa5d242148",
    "metadata": {},
    "source": [
-    "PSU: \n",
+    "## Distintas pruebas de admisión analizadas:\n",
+    "\n",
+    "### PSU: \n",
     "    -Rendición: 2003-2020, 1 por año\n",
     "    -Puntaje: 150-850\n",
     "\n",
-    "PDT:\n",
+    "### PDT:\n",
     "    -Rendición: 2020-2022, 1 por año menos el 2022 que se realizó por primera vez Invierno y Regular\n",
     "    -Puntaje: 150-850(en las 2 primeras),  100-1000(en la última)\n",
     "    \n",
     "\n",
-    "PAES:\n",
+    "### PAES:\n",
     "    -Rendición: 2022-  , Invierno y Regular\n",
     "    -Puntaje: 100-1000\n",
     "    \n"
@@ -25,31 +38,29 @@
    "id": "2708c85e-f85c-4688-98ee-8dcbe3ee996a",
    "metadata": {},
    "source": [
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-MATRÍCULA\", \"Matricula_Admisión2017\", \"ArchivoMat_Adm2017.csv\"\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-MATRÍCULA\", \"Matricula_Admisión2017\", \"Libro_CódigosADM2017_ArchivoMatricula.xlsx\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-MATRÍCULA\", \"Matricula_Admisión2017\", \"ArchivoMat_Adm2017.csv\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-MATRÍCULA\", \"Matricula_Admisión2017\", \"Libro_CódigosADM2017_ArchivoMatricula.xlsx\"\n",
     "\n",
-    "\"2017-2024\",\"2017\", \"P.D.A-2017-INSCRIPCIÓN\",\"Inscritos_Admisión2017\", \"Libro_CódigosADM2017_ArchivoB.xlsx\"\n",
-    "\"2017-2024\",\"2017\", \"P.D.A-2017-INSCRIPCIÓN\",\"Inscritos_Admisión2017\",\"ArchivoB_Adm2017.csv\"\n",
+    "- \"2017-2024\",\"2017\", \"P.D.A-2017-INSCRIPCIÓN\",\"Inscritos_Admisión2017\", \"Libro_CódigosADM2017_ArchivoB.xlsx\"\n",
+    "- \"2017-2024\",\"2017\", \"P.D.A-2017-INSCRIPCIÓN\",\"Inscritos_Admisión2017\",\"ArchivoB_Adm2017.csv\"\n",
     "\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-OFERTA-ACADEMICA\", \"OfertaAcadémica_Admisión2017.xlsx\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-OFERTA-ACADEMICA\", \"OfertaAcadémica_Admisión2017.xlsx\"\n",
     "\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-POSTULACION-SELECCION\",\"Postulación_Admisión2017\", \"ArchivoD_Adm2017.csv\"\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-POSTULACION-SELECCION\",\"Postulación_Admisión2017\", \"Libro_CódigosADM2017_ArchivoD.xlsx\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-POSTULACION-SELECCION\",\"Postulación_Admisión2017\", \"ArchivoD_Adm2017.csv\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-POSTULACION-SELECCION\",\"Postulación_Admisión2017\", \"Libro_CódigosADM2017_ArchivoD.xlsx\"\n",
     "\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-PERCENTILES\", \"Percentiles ADM2017.xlsx\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-PERCENTILES\", \"Percentiles ADM2017.xlsx\"\n",
     "\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-REGULAR\",\"Rinden_Admisión2017\", \"ArchivoC_Adm2017.csv\"\n",
-    "\"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-REGULAR\",\"Rinden_Admisión2017\", Libro_CódigosADM2017_ArchivoC.xlsx"
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-REGULAR\",\"Rinden_Admisión2017\", \"ArchivoC_Adm2017.csv\"\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-REGULAR\",\"Rinden_Admisión2017\", Libro_CódigosADM2017_ArchivoC.xlsx"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afb6ae40-b660-49c3-a49c-3751a30b4130",
+   "cell_type": "markdown",
+   "id": "972050c0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Vemos la información que manejaremos"
+    "# *Vemos la información que manejaremos...*"
    ]
   },
   {
@@ -57,7 +68,7 @@
    "id": "0a522ec7-9014-406e-88c5-cf95ab8a73a6",
    "metadata": {},
    "source": [
-    "PROCESO DE ADMICIÓN - INCRIPCIÓN"
+    "### PROCESO DE ADMISIÓN - INCRIPCIÓN"
    ]
   },
   {
@@ -467,29 +478,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50bc29ef-edc1-4fbb-a1df-602433f04065",
+   "cell_type": "markdown",
+   "id": "a9e6531d",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0506de5-5b8c-4b0b-bfd8-570cc18572b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1723a6c-b09d-4d68-b097-7b3d1ec8fd27",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "PROCESO DE ADMICIÓN - POSTULACIÓN"
+    "### PROCESO DE ADMISIÓN - POSTULACIÓN"
    ]
   },
   {
@@ -1126,27 +1119,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86dfe4dc-7e64-4c97-8cdb-9cc955d4a979",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e15de4f-d204-4388-b8e6-7d160f1b3363",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a3eef88b-7362-4092-b713-b6f91a2ed95b",
    "metadata": {},
    "source": [
-    "PROCESO DE ADMICIÓN - RENDICIÓN "
+    "### PROCESO DE ADMICIÓN - RENDICIÓN "
    ]
   },
   {
@@ -1748,29 +1725,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a7c9c3b-5604-4c64-92e3-e74882c73801",
+   "cell_type": "markdown",
+   "id": "863e9747",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39f1176e-084f-43ec-92ca-bcf760a2f9fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a86b11f5-db41-4592-a932-96a748a97d96",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "PROCESO DE ADMICIÓN - MATRÍCULA"
+    "### PROCESO DE ADMISIÓN - MATRÍCULA"
    ]
   },
   {
@@ -1979,19 +1938,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e01879d9-1bdb-48b6-ae60-2a901f9fd3a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "c4a07e42-58db-4ed5-b15c-a9a1368ef848",
    "metadata": {},
    "source": [
-    "EMEZAMOS!!"
+    "## EMPEZAMOS!!"
    ]
   },
   {
@@ -2037,7 +1988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2051,7 +2002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
