--- a/proyecto/datos-DEMRE.ipynb
+++ b/proyecto/datos-DEMRE.ipynb
@@ -2,13 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46997254",
+   "id": "0d436f64-7d22-4913-81c7-5e6802c03a32",
    "metadata": {},
    "source": [
-    "# <img style=\"float: left; padding-right: 20px; width: 200px\" src=\"https://raw.githubusercontent.com/raxlab/imt2200-data/main/media/logo.jpg\"> Proyecto: \"Impacto de la pandemia sobre el NEM\" \n",
-    "## Semestre: 2025-2 \n",
-    "## **Datos primera entrega**\n",
-    "**Grupo de trabajo:** Constanza Alarcón, Carla Espinoza, Gaspar Galaz, Renato Reyes"
+    "# <img style=\"float: left; padding-right: 20px; width: 200px\" src=\"https://raw.githubusercontent.com/raxlab/imt2200-data/main/media/logo.jpg\">  IMT 2200 - Introducción a Ciencia de Datos\n",
+    "**Pontificia Universidad Católica de Chile**<br>\n",
+    "**Instituto de Ingeniería Matemática y Computacional**<br>\n",
+    "**Semestre 2025 - 2**<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29eabc71-e618-4ed9-bd00-606f7558b3de",
+   "metadata": {},
+   "source": [
+    "# <h1><center>Exploración de Datos </center></h1>\n",
+    "\n",
+    "**Integrantes del Proyecto:** Constanza Alarcón, Carla Espinoza, Gaspar Galaz, Renato Reyes.\n",
+    "\n",
+    "**Nombre del Profesor**: Rodrigo A. Carrasco.\n",
+    "\n",
+    "**Fecha de Segunda Entrega**: 21 de octubre de 2025."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78ad016a-8af0-42d7-8837-ae35dd568d16",
+   "metadata": {},
+   "source": [
+    "## 1. Objetivos\n",
+    "\n",
+    "- Explorar y visualizar los datos recolectados para su adecuado entendimiento, procesamiento y análisis posterior.\n",
+    "- Proveer una visión general de los dataframes generados a partir de los datos recolectados."
    ]
   },
   {
@@ -16,21 +41,24 @@
    "id": "2209234b-92e1-4781-b342-b1aa5d242148",
    "metadata": {},
    "source": [
-    "## Distintas pruebas de admisión analizadas:\n",
+    "## 2. Datos\n",
+    "Como recurso se utilizaron las Bases de Datos (BBDD) del proceso de admisión universitaria, proporcionadas por el DEMRE al público en general a través del portal de transparencia: ``https://portal-transparencia.demre.cl/portal-base-datos``.\n",
     "\n",
-    "### PSU: \n",
-    "    -Rendición: 2003-2020, 1 por año\n",
-    "    -Puntaje: 150-850\n",
+    "### 2.1 Rango analizado del proceso:\n",
     "\n",
-    "### PDT:\n",
-    "    -Rendición: 2020-2022, 1 por año menos el 2022 que se realizó por primera vez Invierno y Regular\n",
-    "    -Puntaje: 150-850(en las 2 primeras),  100-1000(en la última)\n",
+    "#### PSU: \n",
+    "    - Rendición: 2017-2019 (una vez al año)\n",
+    "    - Rango de Puntaje: 150-850\n",
+    "\n",
+    "#### PDT:\n",
+    "    - Rendición: 2020-2022 (una vez al año, hasta 2022 donde se realizó en invierno)\n",
+    "    - Puntaje: 150-850\n",
     "    \n",
     "\n",
-    "### PAES:\n",
-    "    -Rendición: 2022-  , Invierno y Regular\n",
-    "    -Puntaje: 100-1000\n",
-    "    \n"
+    "#### PAES:\n",
+    "    - Rendición: 2022-2024 (una vez en 2022, y desde 2023 dos veces al año: invierno y edición regular)\n",
+    "    - Puntaje: 100-1000\n",
+    "    "
    ]
   },
   {
@@ -38,19 +66,29 @@
    "id": "2708c85e-f85c-4688-98ee-8dcbe3ee996a",
    "metadata": {},
    "source": [
+    "### 2.2 Archivos utilizados:\n",
+    "En esta sección se detallan los archivos relacionados con el proceso de admisión universitaria.\n",
+    "\n",
+    "#### Matrícula:\n",
+    "Archivos relacionados con el puntaje ponderado de los estudiantes al matricularse en una carrera y el orden de preferencia de dicha carrera. Además, se incluye información codificada correspondiente a las instituciones y al tipo de matrícula.\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-MATRÍCULA\", \"Matricula_Admisión2017\", \"ArchivoMat_Adm2017.csv\"\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-MATRÍCULA\", \"Matricula_Admisión2017\", \"Libro_CódigosADM2017_ArchivoMatricula.xlsx\"\n",
     "\n",
+    "#### Inscripción:\n",
+    "Archivos que contienen información personal y general de los estudiantes inscritos en cada proceso de admisión.\n",
     "- \"2017-2024\",\"2017\", \"P.D.A-2017-INSCRIPCIÓN\",\"Inscritos_Admisión2017\", \"Libro_CódigosADM2017_ArchivoB.xlsx\"\n",
     "- \"2017-2024\",\"2017\", \"P.D.A-2017-INSCRIPCIÓN\",\"Inscritos_Admisión2017\",\"ArchivoB_Adm2017.csv\"\n",
     "\n",
+    "#### Postulación y Oferta Académica:\n",
+    "Archivos relacionados con el proceso de postulación a las distintas instituciones de educación superior, junto con estadísticas y la oferta académica disponible en cada año.\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-OFERTA-ACADEMICA\", \"OfertaAcadémica_Admisión2017.xlsx\"\n",
-    "\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-POSTULACION-SELECCION\",\"Postulación_Admisión2017\", \"ArchivoD_Adm2017.csv\"\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-POSTULACIÓN-POSTULACION-SELECCION\",\"Postulación_Admisión2017\", \"Libro_CódigosADM2017_ArchivoD.xlsx\"\n",
     "\n",
-    "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-PERCENTILES\", \"Percentiles ADM2017.xlsx\"\n",
+    "#### Rendición y Percentiles:\n",
+    "Archivos que contienen los resultados de los postulantes en las pruebas de admisión, incluyendo sus puntajes y percentiles correspondientes.\n",
     "\n",
+    "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-PERCENTILES\", \"Percentiles ADM2017.xlsx\"\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-REGULAR\",\"Rinden_Admisión2017\", \"ArchivoC_Adm2017.csv\"\n",
     "- \"2017-2024\",\"2017\",\"P.D.A-2017-RENDICIÓN-REGULAR\",\"Rinden_Admisión2017\", Libro_CódigosADM2017_ArchivoC.xlsx"
    ]
@@ -1988,7 +2026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2002,7 +2040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
